# DSBmobile-api

./: .env.example  .gitignore  Cargo.toml  build.rs  example.config.toml  readme.md
doc/: request.md  response.md
src/: api.rs  config.rs  data.rs  lib.rs  protobuf.rs
src/api/: handlers.rs  plan.rs  root.rs  routes.rs
src/data/: compression.rs  objects.rs  parse.rs  requests.rs  routines.rs
src/protobuf/: untis.proto  untis.rs
tests/plans/: date.html  full-1.html  full-2.html  full-3.html
