[package]
name = "dsb-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0.147", features = ["derive"] }
tokio = { version = "1.21.2", features = ["full"] }
chrono = "0.4.22"
reqwest = "0.11.12"
toml = "0.5.9"
simplelog = "0.12.0"
log = "0.4.17"
structstruck = "0.2.2"
tl = "0.7.7"