[package]
name = "dsb-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arc-swap = "1.5.1"
lazy_static = "1.4.0"
log = "0.4.17"
reqwest = "0.11.12"
scraper = "0.13.0"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0"
simplelog = "0.12.0"
time = "0.3.17"
tokio = { version = "1.21.2", features = ["full"] }
toml = "0.5.9"
warp = "0.3.3"